Enums, correção de campos redundantes.